--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "express": "~4.9.0",
     "express-handlebars": "^2.0.1",
     "express-session": "^1.11.3",
+    "glob": "^5.0.14",
     "hbs": "~2.7.0",
+    "image-size": "^0.3.5",
     "marked": "^0.3.5",
     "morgan": "~1.3.0",
+    "multer": "^1.0.3",
     "nedb": "^1.1.2",
     "serve-favicon": "~2.1.3"
   },
