--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "express-session": "^1.11.3",
     "glob": "^5.0.14",
     "hbs": "~2.7.0",
-    "image-size": "^0.3.5",
+    "lunr": "^0.5.12",
     "marked": "^0.3.5",
     "morgan": "~1.3.0",
     "multer": "^1.0.3",
