--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "hbs": "~2.7.0",
     "lunr": "^0.5.12",
     "marked": "^0.3.5",
+    "mkdirp": "^0.5.1",
     "morgan": "~1.3.0",
     "multer": "^1.0.3",
     "nedb": "^1.1.2",
