--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "glob": "^5.0.14",
     "hbs": "~2.7.0",
     "lunr": "^0.5.12",
-    "marked": "^0.3.5",
+    "markdown-it": "^4.4.0",
     "mkdirp": "^0.5.1",
     "morgan": "~1.3.0",
     "multer": "^1.0.3",
