- Added export functionality to ".md" files via the "Article > Export" menu. Files are served to the browser as a zip. File names are the article title and contents is the article body - Stumbled across a bug allowing the editing of KB's without being logged in... whoops

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express-session": "^1.11.3",
     "glob": "^5.0.14",
     "hbs": "~2.7.0",
+    "jszip": "^2.5.0",
     "lunr": "^0.5.12",
     "markdown-it": "^4.4.0",
     "mkdirp": "^0.5.1",
