--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jszip": "^2.5.0",
     "lunr": "^0.5.12",
     "markdown-it": "^4.4.0",
+    "markdown-it-classy": "^0.2.0",
     "mkdirp": "^0.5.1",
     "moment": "^2.10.6",
     "morgan": "~1.3.0",
