--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "morgan": "~1.3.0",
     "multer": "^1.0.3",
     "nedb": "^1.1.2",
+    "nedb-session-store": "^1.1.1",
     "serve-favicon": "~2.1.3"
   },
   "description": "openKB",
