--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "multer": "^1.0.3",
     "nedb": "^1.1.2",
     "nedb-session-store": "^1.1.1",
-    "serve-favicon": "~2.1.3"
+    "serve-favicon": "~2.1.3",
+    "walk": "^2.3.9"
   },
   "description": "openKB",
   "main": "app.js",
