--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "openkb",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "private": false,
   "scripts": {
     "start": "node app.js"
@@ -42,10 +42,12 @@
     "nedb",
     "documentation",
     "platform",
-    "nodejs"
+    "nodejs",
+    "kb",
+    "documentation"
   ],
   "author": "Mark Moffat",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/mrvautin/openKB/issues"
   },
