--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "openkb",
-  "version": "1.0.3",
+  "version": "1.0.4",
+  "description": "An Open Source Nodejs Markdown based knowledge base (FAQ) app with powerful lunr search",
   "private": false,
   "scripts": {
     "start": "node app.js"
