--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "openkb",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "description": "An Open Source Nodejs Markdown based knowledge base/FAQ/Wiki app with powerful lunr search",
   "private": false,
   "scripts": {
@@ -9,13 +9,16 @@
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.8.4",
+    "bootstrap": "^3.3.7",
     "cookie-parser": "~1.3.3",
     "debug": "~2.0.0",
     "express": "~4.9.0",
     "express-handlebars": "^2.0.1",
     "express-session": "^1.11.3",
+    "font-awesome": "^4.6.3",
     "glob": "^5.0.14",
     "hbs": "~2.7.0",
+    "jquery": "^3.1.0",
     "jszip": "^2.5.0",
     "lunr": "^0.5.12",
     "markdown-it": "^7.0.0",
@@ -26,6 +29,7 @@
     "nedb": "^1.1.2",
     "nedb-session-store": "^1.1.1",
     "serve-favicon": "~2.1.3",
+    "simplemde": "^1.11.2",
     "walk": "^2.3.9"
   },
   "main": "app.js",
