--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "multer": "^1.0.3",
     "nedb": "^1.1.2",
     "nedb-session-store": "^1.1.1",
+    "remove-markdown": "^0.1.0",
     "serve-favicon": "~2.1.3",
     "simplemde": "^1.11.2",
     "walk": "^2.3.9"
