--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "markdown-it": "^7.0.0",
     "mkdirp": "^0.5.1",
     "moment": "^2.10.6",
+    "mongodb": "^2.2.9",
     "morgan": "~1.3.0",
     "multer": "^1.0.3",
     "nedb": "^1.1.2",
@@ -51,7 +52,8 @@
     "documentation",
     "faq",
     "wiki",
-    "openkb"
+    "openkb",
+    "mongodb"
   ],
   "author": "Mark Moffat",
   "license": "MIT",
