--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "openkb",
-  "version": "1.0.9",
-  "description": "An Open Source Nodejs Markdown based knowledge base/FAQ/Wiki app with powerful lunr search",
+  "version": "1.0.10",
+  "description": "openKB is an Open Source Nodejs Markdown based knowledge base/FAQ/Wiki app with powerful lunr search",
   "private": false,
   "scripts": {
     "start": "node app.js"
