--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "remove-markdown": "^0.1.0",
     "serve-favicon": "~2.1.3",
     "simplemde": "^1.11.2",
+    "sitemap": "^1.8.1",
     "walk": "^2.3.9"
   },
   "main": "app.js",
