--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,9 @@
 node_modules/
 data/users.db
 data/sessions.db
-Rubbish/
 data/kb.db
+data/votes.db
+Rubbish/
 public/images/
 public/uploads/
 data/export.zip
