--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "hbs": "~2.7.0",
     "jquery": "^3.1.0",
     "jszip": "^2.5.0",
+    "junk": "^2.0.0",
     "lunr": "^0.5.12",
     "markdown-it": "^7.0.0",
     "mkdirp": "^0.5.1",
