--- a/package.json
+++ b/package.json
@@ -19,15 +19,19 @@
     "express-handlebars": "^2.0.1",
     "express-session": "^1.14.1",
     "express-state": "^1.4.0",
+    "extract-zip": "^1.5.0",
     "font-awesome": "^4.6.3",
     "glob": "^5.0.14",
     "hbs": "~2.7.0",
+    "i18n-2": "^0.6.3",
     "jquery": "^3.1.0",
     "jsonschema": "^1.1.0",
     "jszip": "^2.6.1",
     "junk": "^2.0.0",
+    "lodash": "^4.17.2",
     "lunr": "^0.7.1",
     "markdown-it": "^7.0.1",
+    "mime-types": "^2.1.13",
     "mkdirp": "^0.5.1",
     "moment": "^2.15.0",
     "mongodb": "^2.2.9",
@@ -35,10 +39,11 @@
     "multer": "^1.2.0",
     "nedb": "^1.8.0",
     "nedb-session-store": "^1.1.1",
-    "i18n-2": "^0.6.3",
     "remove-markdown": "^0.1.0",
+    "rimraf": "^2.5.4",
     "simplemde": "^1.11.2",
     "sitemap": "^1.8.1",
+    "speakingurl": "^10.0.0",
     "walk": "^2.3.9"
   },
   "main": "app.js",
