--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "jszip": "^2.6.1",
     "junk": "^2.0.0",
     "lodash": "^4.17.2",
-    "lunr": "^0.7.1",
+    "lunr": "^2.0.4",
     "markdown-it": "^7.0.1",
     "mime-types": "^2.1.13",
     "mkdirp": "^0.5.1",
@@ -72,5 +72,5 @@
   "bugs": {
     "url": "https://github.com/mrvautin/openKB/issues"
   },
-  "homepage": "http://openkb.mrvautin.com"
+  "homepage": "https://openkb.markmoffat.com"
 }
