--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "sitemap": "^1.8.1",
     "speakingurl": "^10.0.0",
     "walk": "^2.3.9",
-    "snyk": "^1.30.1"
+    "snyk": "^1.30.1",
     "uglify-js": "^3.0.11",
     "uglifycss": "0.0.27",
     "walk": "^2.3.9"
@@ -80,6 +80,6 @@
     "url": "https://github.com/mrvautin/openKB/issues"
   },
   "homepage": "http://openkb.mrvautin.com",
-  "snyk": true
+  "snyk": true,
   "homepage": "https://openkb.markmoffat.com"
 }
