--- a/package.json
+++ b/package.json
@@ -44,11 +44,11 @@
     "nedb-session-store": "^1.1.1",
     "remove-markdown": "^0.1.0",
     "rimraf": "^2.5.4",
+    "sanitize-html": "^1.14.1",
     "simplemde": "^1.11.2",
     "sitemap": "^1.8.1",
-    "speakingurl": "^10.0.0",
-    "walk": "^2.3.9",
     "snyk": "^1.30.1",
+    "speakingurl": "^10.0.0",
     "uglify-js": "^3.0.11",
     "uglifycss": "0.0.27",
     "walk": "^2.3.9"
@@ -79,7 +79,6 @@
   "bugs": {
     "url": "https://github.com/mrvautin/openKB/issues"
   },
-  "homepage": "http://openkb.mrvautin.com",
-  "snyk": true,
-  "homepage": "https://openkb.markmoffat.com"
+  "homepage": "https://openkb.markmoffat.com",
+  "snyk": true
 }
