revert config.js

--- a/config/config.json
+++ b/config/config.json
@@ -39,7 +39,7 @@
         "article_versioning": false,
         "api_auth_token": "",
         "api_allowed": false,
-        "locale": "jp",
+        "locale": "en",
         "env": "",
         "style": {
             "cssHeaderBackgroundColor": "",
