* reading google sso settings from config.json * added "Login with Google" button

--- a/config/config.json
+++ b/config/config.json
@@ -51,6 +51,13 @@
             "cssLinkColor": "",
             "cssTextColor": "",
             "cssFontFamily": ""
+        },
+        "sso" : {
+            "google" : {
+                "clientID": "GET YOURS FROM GOOGLE DEVELOPERS CONSOLE",
+                "clientSecret": "GET YOURS FROM GOOGLE DEVELOPERS CONSOLE",
+                "callbackURL": "http://127.0.0.1:4444/auth/google/callback"
+            }
         }
     }
 }
