fixed issues with images not being display after mermaid fix

--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "multer": "^1.2.0",
     "nedb": "^1.8.0",
     "nedb-session-store": "^1.1.1",
+    "object-assign": "^4.1.1",
     "remove-markdown": "^0.1.0",
     "rimraf": "^2.5.4",
     "sanitize-html": "^1.14.1",
