--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "nedb": "^1.8.0",
     "nedb-session-store": "^1.1.1",
     "remove-markdown": "^0.1.0",
+    "require-main-filename": "^1.0.1",
     "rimraf": "^2.5.4",
     "sanitize-html": "^1.14.1",
     "simplemde": "^1.11.2",
