--- a/config/config.json
+++ b/config/config.json
@@ -28,9 +28,9 @@
         },
         "allow_voting": true,
         "google_analytics": "",
-        "theme": "",
+        "theme": "tocbot",
         "show_logon": true,
-        "add_header_anchors": false,
+        "add_header_anchors": true,
         "typeahead_search": true,
         "index_article_body": false,
         "enable_spellchecker": true,
