modified breakpoints for small, medium and large

--- a/config/config.json
+++ b/config/config.json
@@ -1,41 +1,41 @@
 {
     "settings": {
         "route_name": "kb",
-        "num_top_results": "10",
+        "num_top_results": "250",
         "date_format": "DD/MM/YYYY h:mmA",
         "show_view_count": true,
-        "update_view_count_logged_in": false,
+        "update_view_count_logged_in": true,
         "show_published_date": true,
         "sort_by": {
             "field": "kb_viewcount",
             "order": -1
         },
-        "website_title": "openKB",
+        "website_title": "RemusKB",
         "show_featured_articles": true,
         "show_featured_in_article": false,
         "featured_articles_count": "4",
-        "password_protect": false,
-        "show_kb_meta": true,
-        "suggest_allowed": true,
-        "show_author_email": true,
-        "mermaid": false,
-        "mathjax": false,
+        "password_protect": true,
+        "show_kb_meta": false,
+        "suggest_allowed": false,
+        "show_author_email": false,
+        "mermaid": true,
+        "mathjax": true,
         "mathjax_input_mode": "TeX-MML-AM_CHTML",
         "app_context": "",
         "links_blank_page": true,
         "database": {
             "type": "embedded"
         },
-        "allow_voting": true,
+        "allow_voting": false,
         "google_analytics": "",
         "theme": "tocbot",
         "show_logon": true,
         "add_header_anchors": true,
         "typeahead_search": true,
-        "index_article_body": false,
+        "index_article_body": true,
         "enable_spellchecker": true,
-        "show_website_logo": true,
-        "website_description": "openKB is an Open Source Node.js Markdown based knowledge base/FAQ/Wiki app with powerful lunr search",
+        "show_website_logo": false,
+        "website_description": "RemusKB needs no description. ",
         "article_versioning": false,
         "api_auth_token": "",
         "api_allowed": false,
