--- a/config/config.json
+++ b/config/config.json
@@ -28,7 +28,7 @@
         },
         "allow_voting": false,
         "google_analytics": "",
-        "theme": "tocbot",
+        "theme": "",
         "show_logon": true,
         "add_header_anchors": true,
         "typeahead_search": true,
