--- a/package.json
+++ b/package.json
@@ -11,48 +11,48 @@
     "uglify": "node bin/uglify.js"
   },
   "dependencies": {
-    "async": "^2.0.1",
+    "async": "^2.6.2",
     "bcrypt-nodejs": "0.0.3",
-    "body-parser": "^1.15.2",
-    "bootstrap": "^3.3.7",
-    "compression": "^1.6.2",
+    "body-parser": "^1.19.0",
+    "bootstrap": "^3.4.1",
+    "compression": "^1.7.4",
     "cookie-parser": "~1.3.3",
     "debug": "~2.6.7",
     "express": "~4.15.3",
-    "express-handlebars": "^3.0.0",
-    "express-session": "^1.14.1",
+    "express-handlebars": "^3.1.0",
+    "express-session": "^1.16.1",
     "express-state": "^1.4.0",
-    "extract-zip": "^1.5.0",
+    "extract-zip": "^1.6.7",
     "font-awesome": "^4.6.3",
     "glob": "^5.0.14",
-    "hbs": "~4.0.1",
+    "hbs": "^4.0.4",
     "i18n-2": "^0.6.3",
-    "jquery": "^3.1.0",
-    "jsonschema": "^1.1.0",
+    "jquery": "^3.4.1",
+    "jsonschema": "^1.2.4",
     "jszip": "^2.6.1",
     "junk": "^2.0.0",
-    "lodash": "^4.17.2",
+    "lodash": "^4.17.11",
     "lunr": "^0.7.2",
     "markdown-it": "^7.0.1",
-    "mime-types": "^2.1.13",
+    "mime-types": "^2.1.24",
     "mkdirp": "^0.5.1",
-    "moment": "^2.15.0",
-    "mongodb": "^2.2.9",
+    "moment": "^2.24.0",
+    "mongodb": "^2.2.36",
     "morgan": "~1.3.0",
-    "multer": "^1.2.0",
+    "multer": "^1.4.1",
     "nedb": "^1.8.0",
-    "nedb-session-store": "^1.1.1",
+    "nedb-session-store": "^1.1.2",
     "remove-markdown": "^0.1.0",
     "require-main-filename": "^1.0.1",
-    "rimraf": "^2.5.4",
-    "sanitize-html": "^1.14.1",
+    "rimraf": "^2.6.3",
+    "sanitize-html": "^1.20.1",
     "simplemde": "^1.11.2",
     "sitemap": "^1.8.1",
-    "snyk": "^1.41.1",
+    "snyk": "^1.166.0",
     "speakingurl": "^10.0.0",
-    "uglify-js": "^3.0.11",
+    "uglify-js": "^3.5.15",
     "uglifycss": "0.0.27",
-    "walk": "^2.3.9"
+    "walk": "^2.3.14"
   },
   "main": "app.js",
   "devDependencies": {},
