--- a/config/config.json
+++ b/config/config.json
@@ -10,23 +10,28 @@
             "field": "kb_viewcount",
             "order": -1
         },
-        "website_title": "openKB",
+        "website_title": "",
         "show_featured_articles": true,
         "show_featured_in_article": false,
         "featured_articles_count": "4",
         "password_protect": false,
         "show_kb_meta": true,
-        "suggest_allowed": true,
+        "suggest_allowed": false,
         "show_author_email": true,
         "mermaid": false,
         "mathjax": false,
         "mathjax_input_mode": "TeX-MML-AM_CHTML",
         "app_context": "",
+        "base_link": "",
         "links_blank_page": true,
+        "owner-site": "",
+        "owner": "",
+        "heading": "",
+        "subheading": "",
         "database": {
             "type": "embedded"
         },
-        "allow_voting": true,
+        "allow_voting": false,
         "google_analytics": "",
         "theme": "",
         "show_logon": true,
@@ -35,11 +40,11 @@
         "index_article_body": false,
         "enable_spellchecker": true,
         "show_website_logo": true,
-        "website_description": "openKB is an Open Source Node.js Markdown based knowledge base/FAQ/Wiki app with powerful lunr search",
+        "website_description": "",
         "article_versioning": false,
         "api_auth_token": "",
         "api_allowed": false,
-        "locale": "en",
+        "locale": "it",
         "env": "",
         "style": {
             "cssHeaderBackgroundColor": "",
