--- a/config/config.json
+++ b/config/config.json
@@ -10,28 +10,28 @@
             "field": "kb_viewcount",
             "order": -1
         },
-        "website_title": "",
+        "website_title": "openKB",
         "show_featured_articles": true,
         "show_featured_in_article": false,
         "featured_articles_count": "4",
         "password_protect": false,
         "show_kb_meta": true,
-        "suggest_allowed": false,
+        "suggest_allowed": true,
         "show_author_email": true,
         "mermaid": false,
         "mathjax": false,
         "mathjax_input_mode": "TeX-MML-AM_CHTML",
         "app_context": "",
-        "base_link": "",
+        "base_link": "", // Insert the base url of the website to generate correct link when node is behind as example nginx
         "links_blank_page": true,
-        "owner-site": "",
-        "owner": "",
-        "heading": "",
-        "subheading": "",
+        "owner-site": "", // Insert here the link of the site owner example https://mysite.com
+        "owner": "", // The name of the owner to show into the powered by
+        "heading": "", // The text to show above the search bar
+        "subheading": "", // The text to show down to the search bar
         "database": {
             "type": "embedded"
         },
-        "allow_voting": false,
+        "allow_voting": true,
         "google_analytics": "",
         "theme": "",
         "show_logon": true,
@@ -40,11 +40,11 @@
         "index_article_body": false,
         "enable_spellchecker": true,
         "show_website_logo": true,
-        "website_description": "",
+        "website_description": "openKB is an Open Source Node.js Markdown based knowledge base/FAQ/Wiki app with powerful lunr search",
         "article_versioning": false,
         "api_auth_token": "",
         "api_allowed": false,
-        "locale": "it",
+        "locale": "en",
         "env": "",
         "style": {
             "cssHeaderBackgroundColor": "",
