--- a/package.json
+++ b/package.json
@@ -7,18 +7,18 @@
     "start": "node app.js",
     "dbUpgrade": "node data/mongodbUpgrade.js",
     "snyk-protect": "snyk protect",
-    "prepublish": "npm run snyk-protect",
+    "prepare": "npm run snyk-protect",
     "uglify": "node bin/uglify.js"
   },
   "dependencies": {
     "async": "^2.6.2",
-    "bcrypt-nodejs": "0.0.3",
+    "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
     "bootstrap": "^3.4.1",
     "compression": "^1.7.4",
     "cookie-parser": "~1.3.3",
     "debug": "~2.6.7",
-    "express": "~4.15.3",
+    "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
     "express-session": "^1.16.1",
     "express-state": "^1.4.0",
@@ -38,7 +38,7 @@
     "mkdirp": "^0.5.1",
     "moment": "^2.24.0",
     "mongodb": "^2.2.36",
-    "morgan": "~1.3.0",
+    "morgan": "^1.9.1",
     "multer": "^1.4.1",
     "nedb": "^1.8.0",
     "nedb-session-store": "^1.1.2",
