--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "prepare": "npm run snyk-protect",
     "uglify": "node bin/uglify.js"
   },
+  "engines" : { 
+    "node" : ">=8.0.0 <13.0.0" 
+  },
   "dependencies": {
     "async": "^2.6.2",
     "bcrypt": "^3.0.6",
