--- a/config/config.json
+++ b/config/config.json
@@ -10,22 +10,23 @@
             "field": "kb_viewcount",
             "order": -1
         },
-        "website_title": "openKB",
+        "website_title": "VEDA Knowledge Base",
         "show_featured_articles": true,
         "show_featured_in_article": false,
         "featured_articles_count": "4",
         "password_protect": false,
         "show_kb_meta": true,
         "suggest_allowed": true,
-        "show_author_email": true,
+        "show_author_email": false,
         "mermaid": false,
         "mathjax": false,
         "mathjax_input_mode": "TeX-MML-AM_CHTML",
         "app_context": "",
         "links_blank_page": true,
-        "database": {
-            "type": "embedded"
-        },
+		"database": {
+			"type": "mongodb",
+			"connection_string": "mongodb://127.0.0.1:27017/openkb"
+		},
         "allow_voting": true,
         "google_analytics": "",
         "theme": "",
@@ -33,18 +34,18 @@
         "add_header_anchors": false,
         "typeahead_search": true,
         "index_article_body": false,
-        "enable_spellchecker": true,
+        "enable_spellchecker": false,
         "show_website_logo": true,
-        "website_description": "openKB is an Open Source Node.js Markdown based knowledge base/FAQ/Wiki app with powerful lunr search",
+        "website_description": "FAQ destinée à la mise au point des plateformes de diffusion VEDA.",
         "article_versioning": false,
         "api_auth_token": "",
         "api_allowed": false,
-        "locale": "en",
+        "locale": "fr",
         "env": "",
         "style": {
-            "cssHeaderBackgroundColor": "",
+            "cssHeaderBackgroundColor": "#434240",
             "cssHeaderTextColor": "",
-            "cssFooterBackgroundColor": "",
+            "cssFooterBackgroundColor": "#434240",
             "cssFooterTextColor": "",
             "cssButtonBackgroundColor": "",
             "cssButtonTextColor": "",
