--- a/config/config.json
+++ b/config/config.json
@@ -1,6 +1,7 @@
 {
     "settings": {
         "route_name": "kb",
+		"site_name": "vedaKB",
         "num_top_results": "10",
         "date_format": "DD/MM/YYYY h:mmA",
         "show_view_count": true,
