--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "dependencies": {
     "async": "^2.6.3",
-    "bcrypt-nodejs": "^0.0.3",
+    "bcrypt": "^3.0.7",
     "body-parser": "^1.19.0",
     "bootstrap": "^3.4.1",
     "compression": "^1.7.4",
