--- a/config/config.json
+++ b/config/config.json
@@ -24,7 +24,8 @@
         "app_context": "",
         "links_blank_page": true,
         "database": {
-            "type": "embedded"
+            "type": "mongodb",
+            "connection_string": "mongodb://localhost:27017/openkb"
         },
         "allow_voting": true,
         "google_analytics": "",
