--- a/config/config.json
+++ b/config/config.json
@@ -25,7 +25,7 @@
         "app_context": "",
         "links_blank_page": true,
 		"database": {
-			"type": "embedded"
+			    "type": "mongodb"
 		},
         "allow_voting": true,
         "google_analytics": "",
