--- a/config/config.json
+++ b/config/config.json
@@ -25,7 +25,8 @@
         "app_context": "",
         "links_blank_page": true,
 		"database": {
-			    "type": "mongodb"
+			    "type": "mongodb",
+				    "connection_string": "mongodb://127.0.0.1:27017/openkb"
 		},
         "allow_voting": true,
         "google_analytics": "",
