--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,6 @@
 {
     "settings": {
         "route_name": "kb",
-		"site_name": "vedaKB",
         "num_top_results": "10",
         "date_format": "DD/MM/YYYY h:mmA",
         "show_view_count": true,
@@ -11,23 +10,22 @@
             "field": "kb_viewcount",
             "order": -1
         },
-        "website_title": "VEDA Knowledge Base",
+        "website_title": "openKB",
         "show_featured_articles": true,
         "show_featured_in_article": false,
-        "featured_articles_count": "5",
+        "featured_articles_count": "4",
         "password_protect": false,
         "show_kb_meta": true,
         "suggest_allowed": true,
-        "show_author_email": false,
+        "show_author_email": true,
         "mermaid": false,
         "mathjax": false,
         "mathjax_input_mode": "TeX-MML-AM_CHTML",
         "app_context": "",
         "links_blank_page": true,
-		"database": {
-			    "type": "mongodb",
-				"connection_string": "mongodb://127.0.0.1:27017/openkb"
-		},
+        "database": {
+            "type": "embedded"
+        },
         "allow_voting": true,
         "google_analytics": "",
         "theme": "",
@@ -35,18 +33,18 @@
         "add_header_anchors": false,
         "typeahead_search": true,
         "index_article_body": false,
-        "enable_spellchecker": false,
+        "enable_spellchecker": true,
         "show_website_logo": true,
-        "website_description": "FAQ destinée à la mise au point des plateformes de diffusion VEDA.",
+        "website_description": "openKB is an Open Source Node.js Markdown based knowledge base/FAQ/Wiki app with powerful lunr search",
         "article_versioning": false,
         "api_auth_token": "",
         "api_allowed": false,
-        "locale": "fr",
+        "locale": "en",
         "env": "",
         "style": {
-            "cssHeaderBackgroundColor": "#434240",
+            "cssHeaderBackgroundColor": "",
             "cssHeaderTextColor": "",
-            "cssFooterBackgroundColor": "#434240",
+            "cssFooterBackgroundColor": "",
             "cssFooterTextColor": "",
             "cssButtonBackgroundColor": "",
             "cssButtonTextColor": "",
