--- a/config/config.json
+++ b/config/config.json
@@ -10,14 +10,14 @@
             "field": "kb_viewcount",
             "order": -1
         },
-        "website_title": "openKB",
+        "website_title": "VEDA Knowledge Base",
         "show_featured_articles": true,
         "show_featured_in_article": false,
-        "featured_articles_count": "4",
+        "featured_articles_count": "5",
         "password_protect": false,
         "show_kb_meta": true,
         "suggest_allowed": true,
-        "show_author_email": true,
+        "show_author_email": false,
         "mermaid": false,
         "mathjax": false,
         "mathjax_input_mode": "TeX-MML-AM_CHTML",
@@ -34,18 +34,18 @@
         "add_header_anchors": false,
         "typeahead_search": true,
         "index_article_body": false,
-        "enable_spellchecker": true,
+        "enable_spellchecker": false,
         "show_website_logo": true,
-        "website_description": "openKB is an Open Source Node.js Markdown based knowledge base/FAQ/Wiki app with powerful lunr search",
+        "website_description": "FAQ destinée à la mise au point des plateformes de diffusion VEDA.",
         "article_versioning": false,
         "api_auth_token": "",
         "api_allowed": false,
         "locale": "en",
         "env": "",
         "style": {
-            "cssHeaderBackgroundColor": "",
+            "cssHeaderBackgroundColor": "#434240",
             "cssHeaderTextColor": "",
-            "cssFooterBackgroundColor": "",
+            "cssFooterBackgroundColor": "#434240",
             "cssFooterTextColor": "",
             "cssButtonBackgroundColor": "",
             "cssButtonTextColor": "",
