--- a/config/config.json
+++ b/config/config.json
@@ -40,7 +40,7 @@
         "article_versioning": false,
         "api_auth_token": "",
         "api_allowed": false,
-        "locale": "en",
+        "locale": "fr",
         "env": "",
         "style": {
             "cssHeaderBackgroundColor": "#434240",
