add allow query param to public pages

--- a/config/config.json
+++ b/config/config.json
@@ -51,6 +51,7 @@
             "cssLinkColor": "",
             "cssTextColor": "",
             "cssFontFamily": ""
-        }
+        },
+        "allow_query_param": true
     }
 }
