--- a/.helm-chart/values.yaml
+++ b/.helm-chart/values.yaml
@@ -76,11 +76,11 @@ resources:
 
 livenessProbe:
   httpGet:
-    path: /health
+    path: /
     port: http
 readinessProbe:
   httpGet:
-    path: /health
+    path: /
     port: http
 
 autoscaling:
